<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    
	<View
	    android:id="@+id/view1"
    	android:layout_width="fill_parent"
    	android:layout_height="1dip"
    	android:background="@color/allwhite" 
	/>

    <ImageView
        android:id="@+id/image"
        android:contentDescription="@string/description"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/view1" />
 
    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/allwhite"  
        android:textSize="15dp"
        android:layout_toRightOf="@+id/image"/>

    
    <TextView
        android:id="@+id/text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/allwhite" 
        android:textSize="15dp"
        android:layout_toRightOf="@+id/image"
        android:layout_below="@+id/text1"/>
    	
    
    <TextView
        android:id="@+id/text3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/allwhite" 
        android:textSize="15dp"
        android:layout_toRightOf="@+id/image"
        android:layout_below="@+id/text2"/>   
        
    <TextView
        android:id="@+id/text4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web" 
        android:textSize="15dp"
        android:layout_toRightOf="@+id/image"
        android:layout_below="@+id/text3"/> 

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	android:layout_below="@+id/text4"
    	android:gravity="center"
    	>
    	<Button
       		android:id="@+id/dialogButtonDirections"
        	android:layout_width="100dp"
        	android:layout_height="35dp"
        	android:text="@string/directions"
        	android:layout_marginTop="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"/>
     
    	<Button
        	android:id="@+id/dialogButtonCancel"
        	android:layout_width="100dp"
        	android:layout_height="35dp"
        	android:text="@string/cancel"
        	android:layout_marginTop="5dp"
        	android:layout_marginRight="5dp"
        	/>
    
	</LinearLayout>

</RelativeLayout>

